k8s/ingress/student-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-api-ingress
  namespace: student-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: student-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-api-service
            port:
              number: 8080
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-api-service
            port:
              number: 8080
